# ChangeLog for app-misc/tmux
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> +tmux-0.2.ebuild,
  +metadata.xml:
  New Ebuild for bug 224455. Thanks to drac for reviewing, and Marek Miller
  for testing on x86 and improving src_install by installing the docs/examples
