@@ -1,4 +1,4 @@
 DIST tmux-0.2.tar.gz 76574 RMD160 2b4ce714751e12c9133ee0fac041a43ff78700ec SHA1 cceeb24a38fc58ffaf0ed1d5eb31ec1270626706 SHA256 1866c83a9700636170e4d342d21f6b4c227a19ab1070702258c1ac9f9e1df4a3
-EBUILD tmux-0.2.ebuild 785 RMD160 d1f7f526032d9b806930d79762eee735a4616da4 SHA1 dd5c71ba76a6ac8c32ba44795a4e7e8e675ca5b4 SHA256 8054f092831fb212ae6f4240ea320dcfc74b364e9fa188764f71e964ea920ea7
-MISC ChangeLog 361 RMD160 23c16d50fa698c749a513dd8290c6bc67b0925e1 SHA1 119aed509f9d21b4abfa1f40b059de7289070c25 SHA256 b22aa8cc87bbc2013cfff9b042faf8a4b26a6821d620815559fd94c44b58139d
+EBUILD tmux-0.2.ebuild 871 RMD160 f76942e89285b5fcb554efd3973013e0ac520be9 SHA1 3bbee377ba47c514b25482f8b73d728a8d76f5c9 SHA256 8c74794aa489b11b3dfc6d1893b0f2d3eb634130ea87530e888c7c6d8e520c6a
+MISC ChangeLog 464 RMD160 fa2a3cf70fe82ab75465145c6f9ae3bb3a4ad904 SHA1 c405fb072ec5960ea8a2659f9e7bdaa5fcac04e7 SHA256 08d453a095dd9f30262f557ebce7671a83db4d71b9f66a3a038f29db0f05fd32
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
