@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/tmux/${P}.tar.gz"
 LICENSE="ISC"
 SLOT="0"
 KEYWORDS="~amd64 ~sparc ~x86"
-IUSE="examples"
+IUSE="debug examples"
 
 DEPEND="sys-libs/ncurses"
 RDEPEND="${DEPEND}"
@@ -20,7 +20,10 @@ src_unpack() {
 	unpack ${A}
 	cd "${S}"
 
-	sed -i -e "s|man/man1|share/man/man1|" GNUmakefile || die "sed failed."
+	if use debug ; then
+		sed -i "/DEBUG/s/^#//" GNUmakefile || die "sed failed."
+	fi
+	sed -i "s|man/man1|share/man/man1|" GNUmakefile || die "sed failed."
 }
 
 src_compile() {
